# PWP

./: .gitignore  .pylintrc  MANIFEST.in  README.md  database.py  meetings.md  pyproject.toml
instance/: example.db
swimapi/: __init__.py  api.py  extensions.py  models.py  utils.py
swimapi/resources/: reservation.py  resources.py  timeslot.py  user.py
tests/: conftest.py  test_api.py  test_init.py  test_models.py  test_utils.py
tests/resources/: test_reservation.py  test_resources.py  test_timeslot.py  test_user.py
